syntax = "proto3";
package quorum.pb;
import "chain.proto";
option go_package = "github.com/rumsystem/quorum/pkg/pb";

message RumDataMsg {
 RumDataMsgType MsgType = 1;
 Package DataPackage = 2;
}

enum RumDataMsgType {
    CHAIN_DATA  = 0;
}

